test/tests/errors/error-class-no-own2.sm
// false
// false
// false
/**/
/**/

program {
    class T {
        public own x: int = 1;
    }
}